# mahi-robo

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  ex_testAIForceSensor.cpp  ex_trajectory.cpp
include/Mahi/: Robo.hpp
include/Mahi/Robo/: Types.hpp
include/Mahi/Robo/Control/: Limiter.hpp  PdController.hpp  PidController.hpp
include/Mahi/Robo/Mechatronics/: AIForceSensor.hpp  AtiSensor.hpp  CurrentAmplifier.hpp  DcMotor.hpp  ForceSensor.hpp  TorqueSensor.hpp
include/Mahi/Robo/Trajectories/: DynamicMotionPrimitive.hpp  MinimumJerk.hpp  Trajectory.hpp  WayPoint.hpp
src/Mahi/Robo/: CMakeLists.txt
src/Mahi/Robo/Control/: CMakeLists.txt  Limiter.cpp  PdController.cpp  PidController.cpp
src/Mahi/Robo/Mechatronics/: AIForceSensor.cpp  Actuator.cpp  Actuator.hpp  AtiSensor.cpp  CMakeLists.txt  CurrentAmplifier.cpp  DcMotor.cpp  ForceSensor.cpp  Joint.cpp  Joint.hpp  PositionSensor.cpp  PositionSensor.hpp  Robot.cpp  Robot.hpp  TorqueSensor.cpp  VelocitySensor.cpp  VelocitySensor.hpp  VoltPaqX4.cpp  VoltPaqX4.hpp
src/Mahi/Robo/Trajectories/: CMakeLists.txt  DynamicMotionPrimitive.cpp  MinimumJerk.cpp  Trajectory.cpp  WayPoint.cpp
